# Evidentia

./: .env.example  .gitignore  ARCHITECTURE.md  DEVELOPMENT_PLAN.md  README.md  SYSTEM.md  SYSTEM_INVARIANTS.md  TEST_PLAN.md  pyproject.toml
docs/: AGENT.md  REPO_MAP.md  contracts.md
docs/context/: ARCHITECTURE.md  DEVELOPMENT_PLAN.md  SYSTEM.md  SYSTEM_INVARIANTS.md  TEST_PLAN.md  contracts.md
docs/plans/: ROADMAP.md
docs/reference/: CONTRACTS.md  TEST_STRATEGY.md
infra/cdk/: README.md  app.py  pyproject.toml
infra/cdk/evidentia_cdk/: __init__.py  foundation_stack.py
provenance/: README.md  __init__.py  errors.py  manifest_store.py  retrieval_normalizer.py
schemas/: evidence-item.schema.json  model-answer.schema.json  query-request.schema.json  query-response.schema.json
scripts/: clean_reset_foundation.sh  cleanup_redundant_s3_buckets.sh  cleanup_redundant_s3vectors.sh  phase1_ingestion_smoke_test.sh  register_ingestion_manifest.py  run_s3_vectors_inspector.sh  sync_env_from_stack.sh
tests/: test_contract_fixtures.py  test_ingestion_manifest_store.py  test_retrieval_provenance_normalizer.py  test_s3_vectors_inspector.py
tests/fixtures/: README.md  evidence-item.text.valid.json  evidence-item.visual.valid.json  model-answer.valid.json  query-request.scoped.valid.json  query-request.unscoped.valid.json  query-response.valid.json
tools/s3_vectors_inspector/: README.md  __init__.py  inspector.py  server.py
tools/s3_vectors_inspector/static/: app.js  index.html  (+1 more)
validation/: README.md  __init__.py  errors.py  schema_loader.py  validators.py
